--- a/Benshi.AI_Assignment/app/src/main/res/layout/post_item.xml
+++ b/Benshi.AI_Assignment/app/src/main/res/layout/post_item.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="130dp"
     android:layout_margin="3dp"
     android:elevation="8dp">
 
     <LinearLayout
+        android:id="@+id/llPost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -19,6 +20,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.3"
             android:src="@drawable/ic_place_holder"
+            android:scaleType="fitXY"
             android:padding="5dp" />
 
         <LinearLayout
@@ -34,32 +36,23 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato"
                 android:maxLines="2"
-                android:text="Testing"
                 android:textColor="#000"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvBody"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginVertical="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="3dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/lato"
                 android:maxLength="100"
-                android:text="Testing"
+                android:text=""
                 android:textColor="#000"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:fontFamily="@font/lato"
-                android:padding="8dp"
-                android:text="Sanjay"
-                android:textColor="@color/black" />
         </LinearLayout>
     </LinearLayout>
 
